# boa

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  ax_instantiation_utils.py  codecov.yml  environment.yaml  environment.yml  environment_addition_r_rtd.yml  environment_dev.yaml  environment_dev.yml  environment_dev_update.yml  environment_language_updates.yml  environment_mac_x86.yml  environment_rosetta.yml  experiment.json.pickle  fetch3_env.yml  fetch_wrapper.py  job_queue.py  main.py  metrics.py  opt_model_config.yml  pyproject.toml  run_fetch.py  run_fetch2.py  runner.py  scratch.py  setup.py  tasks.py  utils.py  wrapper.py  wrapper_utils.py
.github/workflows/: CI-win.yaml  CI.yaml  lint.yaml  release.yaml  test.yaml
boa/: __init__.py  __main__.py  __version__.py  _async_opt.py  _doc_utils.py  async-opt.py  async_opt.py  ax_instantiation_utils.py  config.py  controller.py  definitions.py  instantiation_base.py  logger.py  metaclasses.py  plot.py  plotting.py  registry.py  runner.py  scheduler.py  storage.py  template.py  utils.py  wrapper.py  wrapper_utils.py
boa/config/: __init__.py  __main__.py  config.py  converters.py
boa/metrics/: __init__.py  metric_funcs.py  metrics.py  modular_metric.py  synthethic_funcs.py  synthetic_funcs.py
boa/scripts/: moo.py  moo.yaml  run_branin.py  script_wrappers.py  synth_func_cli.py  synth_func_config.yaml  visualize_run.py
boa/test_scripts/: run_branin.py  script_wrappers.py  synth_func_cli.py  synth_func_config.yaml  wrappers.py
boa/wrappers/: __init__.py  base_wrapper.py  script_wrapper.py  synthetic_wrapper.py  wrapper.py  wrapper_utils.py
docs/: build_docs.sh  changelog.rst  code_reference.rst  conf.py  contributing.rst  doc_environment.yaml  doc_requirements.yaml  examples.rst  gallery.rst  getting_started.rst  index.rst  install_github_r_deps.R  overview.rst  troubleshooting.rst
docs/_templates/: custom_module_template_short.rst
docs/code_reference/: ax_instantiation_utils.rst  code_reference.rst  metaclasses.rst  metrics.rst  runner.rst  storage.rst  utils.rst  wrapper.rst  wrapper_utils.rst
docs/examples/: 1moo_optimization_run.ipynb  1optimization_run.ipynb  1run_r_streamlined.ipynb  2EDA_from_r_run.ipynb  index.rst  (+11 more)
optiwrap/: __init__.py  ax_instantiation_utils.py  main.py  metaclasses.py  metrics.py  opt_model_config.yml  runner.py  storage.py  utils.py  wrapper.py  wrapper_utils.py
src/: wrapper.py
tests/: conftest.py  test_config.yaml  test_load_metrics.py
(+92 files in other folders)
