[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "boa-framework"
description = "Bayesian Optimization for Anything: A high-level Bayesian optimization framework and model wrapping tool. It provides an easy-to-use interface between models and the python libraries Ax and BoTorch."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Madeline Scyphers", email = "madelinescyphers@gmail.com"},
    {name = "Justine Missik", email = "jemissik@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
"Source Code" = "https://github.com/madeline-scyphers/boa"
"Bug Tracker" = "https://github.com/madeline-scyphers/boa/issues"
Documentation = "http://boa-framework.readthedocs.io"

[project.scripts]
boa = "boa.cli:main"
"boa-plot" = "boa.plot:main"

[tool.setuptools.packages.find]
include = ["boa*"]

[tool.setuptools_scm]
write_to = "boa/_version.py"

[tool.isort]
profile = "black"
multi_line_output = 3
py_version = 311
skip_glob = ["*env*/*"]

[tool.black]
line-length = 120
# These are regular expressions (hence the \. is escaping the ., and not a literal \.)
exclude = '''
(
    /(\.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | .*env.*
    | _build
    | buck-out
    | build
    | dist
    | _version.py
    )
)
'''

[tool.flakeheaven]
# 80 chars aren't enough in 21 century
max_line_length = 120
# show line of source code in output
show_source = true

exclude = [
    "scratch",
    ".git",
    "__pycache__",
    "docs",
    "build",
    "dist",
    "tests",
    "venv"
]

# list of plugins and rules for them
[tool.flakeheaven.plugins]
pyflakes = ["+*"]
# all pycodestyle except line break before binary operator because we use binary break after line break as recommended
# And ignore module level imports not at top of file because of jupyter notebook examples
pycodestyle = ["+*", "-W503", "-E402"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='*.rst'"
doctest_optionflags = "NORMALIZE_WHITESPACE"
norecursedirs = "_build"
filterwarnings = ["ignore::DeprecationWarning:invoke"]
